src/test/ui/parser/keyword-ref-as-identifier.rs
fn main() {
    let ref = "foo"; //~ error: expected identifier, found `=`
}
